src/tests/snapshots/gitu__tests__stash__stash_drop_prompt.snap
---
source: src/tests/stash.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Stashes                                                                        |
 stash@0 On main: file-two                                                      |
 stash@1 On main: file-one                                                      |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Drop stash (default 0): › █                                                   |
styles_hash: 68af8ca335cd4ab4
