src/tests/snapshots/gitu__tests__stash__stash_keeping_index_prompt.snap
---
source: src/tests/stash.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Untracked files                                                                |
 file-two                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 added      file-one…                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Stash message: › █                                                            |
styles_hash: c67ca6576695873e
