src/tests/snapshots/gitu__tests__stash__stash_menu.snap
---
source: src/tests/stash.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Untracked files                                                                |
 file-two                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 added      file-one…                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
────────────────────────────────────────────────────────────────────────────────|
 Stash                 Arguments                                                |
 z     both            -a Also save untracked and ignored files (--all)         |
 a     apply           -u Also save untracked files (--include-untracked)       |
 i     index                                                                    |
 w     worktree                                                                 |
 x     keeping index                                                            |
 p     pop                                                                      |
 k     drop                                                                     |
 q/esc Quit/Close                                                               |
styles_hash: ccbfe0dd78edc210
