src/tests/snapshots/gitu__tests__stash__stash_pop.snap
---
source: src/tests/stash.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Staged changes (1)                                                             |
 added      file-one                                                            |
 @@ -0,0 +1 @@                                                                  |
 +blahonga                                                                      |
                                                                                |
 Stashes                                                                        |
 stash@0 On main: file-two                                                      |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git stash pop -q 1                                                            |
styles_hash: 2e86840883af6e5c
